silent code cleanup and adding pgadmin